fixed broken headers and downsized feature topic spacing

--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -1,6 +1,6 @@
 .featured-section {
 	text-align: center;
-	margin: 4em 0em 4em 0em;
+	margin: 6em 0em 1em 0em;
 }
 
 .mini-banner {
@@ -12,5 +12,13 @@
 .mini-banner-label {
 	padding-left: 25%;
 	padding-right: 25%;
+	text-align: center;
+}
+
+.subtopic-mini-banner-label {
+	padding-left: 25%;
+	padding-right: 25%;
+	padding-top: 0em;
+	padding-bottom: 1em;
 	text-align: center;
 }
